# shl-assessment-agent

./: .gitignore  .render-build.sh  main.py  pyproject.toml  requirements.txt
app/: agent.py  catalog.py  config.py  decision.py  extraction.py  generation.py  llm_client.py  main.py  prompts.py  retrieval.py  router.py  schemas.py
data/catalog_index/: catalog.faiss
scripts/: build_index.py  dowload_catalog.py  list_models.py  prepare_catalog.py  test_catalog.py  test_catalog_loader.py
tests/: test_agent.py  test_extraction.py  test_generation.py  test_llm.py  test_models.py  test_retrieval.py  test_router.py
